fargate-dask-stack/cdk.out/aws-stack.template.json
{
  "Resources": {
    "DaskVPC2EFDA1EC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-stack/DaskVPC"
          }
        ]
      }
    },
    "DaskVPCPublicSubnet1SubnetBAEBDFDE": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-stack/DaskVPC/PublicSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      }
    },
    "DaskVPCPublicSubnet1RouteTableC3FD7C22": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-stack/DaskVPC/PublicSubnet1"
          }
        ]
      }
    },
    "DaskVPCPublicSubnet1RouteTableAssociation8746EB6C": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "DaskVPCPublicSubnet1RouteTableC3FD7C22"
        },
        "SubnetId": {
          "Ref": "DaskVPCPublicSubnet1SubnetBAEBDFDE"
        }
      }
    },
    "DaskVPCPublicSubnet1DefaultRoute19C90886": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "DaskVPCPublicSubnet1RouteTableC3FD7C22"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "DaskVPCIGWF1821BC8"
        }
      },
      "DependsOn": [
        "DaskVPCVPCGWA7798F51"
      ]
    },
    "DaskVPCPublicSubnet1EIP9DB75489": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "DaskVPCPublicSubnet1NATGateway471934E4": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "DaskVPCPublicSubnet1EIP9DB75489",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "DaskVPCPublicSubnet1SubnetBAEBDFDE"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-stack/DaskVPC/PublicSubnet1"
          }
        ]
      }
    },
    "DaskVPCPublicSubnet2SubnetDCC064E3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-stack/DaskVPC/PublicSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      }
    },
    "DaskVPCPublicSubnet2RouteTable894C9C23": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-stack/DaskVPC/PublicSubnet2"
          }
        ]
      }
    },
    "DaskVPCPublicSubnet2RouteTableAssociationA81199D0": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "DaskVPCPublicSubnet2RouteTable894C9C23"
        },
        "SubnetId": {
          "Ref": "DaskVPCPublicSubnet2SubnetDCC064E3"
        }
      }
    },
    "DaskVPCPublicSubnet2DefaultRoute8028BFB3": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "DaskVPCPublicSubnet2RouteTable894C9C23"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "DaskVPCIGWF1821BC8"
        }
      },
      "DependsOn": [
        "DaskVPCVPCGWA7798F51"
      ]
    },
    "DaskVPCPublicSubnet2EIP7C98DF0D": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "DaskVPCPublicSubnet2NATGateway24794936": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "DaskVPCPublicSubnet2EIP7C98DF0D",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "DaskVPCPublicSubnet2SubnetDCC064E3"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-stack/DaskVPC/PublicSubnet2"
          }
        ]
      }
    },
    "DaskVPCPrivateSubnet1Subnet428E411A": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-stack/DaskVPC/PrivateSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      }
    },
    "DaskVPCPrivateSubnet1RouteTable597A5E35": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-stack/DaskVPC/PrivateSubnet1"
          }
        ]
      }
    },
    "DaskVPCPrivateSubnet1RouteTableAssociation576CCEDB": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "DaskVPCPrivateSubnet1RouteTable597A5E35"
        },
        "SubnetId": {
          "Ref": "DaskVPCPrivateSubnet1Subnet428E411A"
        }
      }
    },
    "DaskVPCPrivateSubnet1DefaultRouteD6098CBE": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "DaskVPCPrivateSubnet1RouteTable597A5E35"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "DaskVPCPublicSubnet1NATGateway471934E4"
        }
      }
    },
    "DaskVPCPrivateSubnet2Subnet671AE8E5": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-stack/DaskVPC/PrivateSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      }
    },
    "DaskVPCPrivateSubnet2RouteTableCE42E133": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-stack/DaskVPC/PrivateSubnet2"
          }
        ]
      }
    },
    "DaskVPCPrivateSubnet2RouteTableAssociation39C9CF69": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "DaskVPCPrivateSubnet2RouteTableCE42E133"
        },
        "SubnetId": {
          "Ref": "DaskVPCPrivateSubnet2Subnet671AE8E5"
        }
      }
    },
    "DaskVPCPrivateSubnet2DefaultRoute3DB4820A": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "DaskVPCPrivateSubnet2RouteTableCE42E133"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "DaskVPCPublicSubnet2NATGateway24794936"
        }
      }
    },
    "DaskVPCIGWF1821BC8": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-stack/DaskVPC"
          }
        ]
      }
    },
    "DaskVPCVPCGWA7798F51": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        },
        "InternetGatewayId": {
          "Ref": "DaskVPCIGWF1821BC8"
        }
      }
    },
    "DaskCluster3EF020CE": {
      "Type": "AWS::ECS::Cluster",
      "Properties": {
        "ClusterName": "DaskCluster"
      }
    },
    "DaskClusterDefaultServiceDiscoveryNamespace30C3BAD1": {
      "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
      "Properties": {
        "Name": "local",
        "Vpc": {
          "Ref": "DaskVPC2EFDA1EC"
        }
      }
    },
    "jupyterLoadBalancer2EB24C90": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "jupyterLoadBalancerSecurityGroupEC92C62E",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          {
            "Ref": "DaskVPCPublicSubnet1SubnetBAEBDFDE"
          },
          {
            "Ref": "DaskVPCPublicSubnet2SubnetDCC064E3"
          }
        ],
        "Type": "application"
      },
      "DependsOn": [
        "DaskVPCPublicSubnet1DefaultRoute19C90886",
        "DaskVPCPublicSubnet2DefaultRoute8028BFB3"
      ]
    },
    "jupyterLoadBalancerSecurityGroupEC92C62E": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB awsstackjupyterLoadBalancerFCC2812C",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 8787",
            "FromPort": 8787,
            "IpProtocol": "tcp",
            "ToPort": 8787
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        }
      }
    },
    "jupyterLoadBalancerSecurityGrouptoawsstackschedulerSecurityGroup63FE0AE48787D39FF98B": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "jupyterLoadBalancerSecurityGroupEC92C62E",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "schedulerSecurityGroup410E7B61",
            "GroupId"
          ]
        },
        "FromPort": 8787,
        "ToPort": 8787
      }
    },
    "jupyterLoadBalancerSecurityGrouptoawsstackjupyterSecurityGroup7315B6F78888208A65BB": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "jupyterLoadBalancerSecurityGroupEC92C62E",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "jupyterSecurityGroup17EB482F",
            "GroupId"
          ]
        },
        "FromPort": 8888,
        "ToPort": 8888
      }
    },
    "jupyterLoadBalancerschedulerPublicListener643C3947": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "schedulerTargetGroup255A1E73"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "jupyterLoadBalancer2EB24C90"
        },
        "Port": 8787,
        "Protocol": "HTTP"
      }
    },
    "jupyterLoadBalancerjupyterPublicListenerA7DC1ECF": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "jupyterTargetGroupBE781992"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "jupyterLoadBalancer2EB24C90"
        },
        "Port": 80,
        "Protocol": "HTTP"
      }
    },
    "workerTaskDefinitionTaskRole981541F1": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "workerTaskDefinition312F102F": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Command": [
              "dask-worker",
              "scheduler.local:8786",
              "--interface",
              "eth0",
              "--nanny",
              "--memory-limit",
              "16G",
              "--worker-port",
              "5555"
            ],
            "Cpu": 4096,
            "Essential": true,
            "Image": "docker.io/milesg/tda-daskworker:1.1.1",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "workerTaskDefinitionworkerContainerLogGroup30810249"
                },
                "awslogs-stream-prefix": "worker-",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Memory": 16384,
            "Name": "workerContainer",
            "PortMappings": [
              {
                "ContainerPort": 8786,
                "HostPort": 8786,
                "Protocol": "tcp"
              },
              {
                "ContainerPort": 8787,
                "HostPort": 8787,
                "Protocol": "tcp"
              },
              {
                "ContainerPort": 9000,
                "HostPort": 9000,
                "Protocol": "tcp"
              },
              {
                "ContainerPort": 5555,
                "HostPort": 5555,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "4096",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "workerTaskDefinitionExecutionRoleB4F8EEAB",
            "Arn"
          ]
        },
        "Family": "awsstackworkerTaskDefinition4C718765",
        "Memory": "16384",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "workerTaskDefinitionTaskRole981541F1",
            "Arn"
          ]
        }
      }
    },
    "workerTaskDefinitionworkerContainerLogGroup30810249": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "RetentionInDays": 1
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "workerTaskDefinitionExecutionRoleB4F8EEAB": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "workerTaskDefinitionExecutionRoleDefaultPolicy0BF4D3DE": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "workerTaskDefinitionworkerContainerLogGroup30810249",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "workerTaskDefinitionExecutionRoleDefaultPolicy0BF4D3DE",
        "Roles": [
          {
            "Ref": "workerTaskDefinitionExecutionRoleB4F8EEAB"
          }
        ]
      }
    },
    "workerService7AAAC38C": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "TaskDefinition": {
          "Ref": "workerTaskDefinition312F102F"
        },
        "Cluster": {
          "Ref": "DaskCluster3EF020CE"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 15,
        "EnableECSManagedTags": false,
        "LaunchType": "FARGATE",
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "workerSecurityGroup49E290CB",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "DaskVPCPrivateSubnet1Subnet428E411A"
              },
              {
                "Ref": "DaskVPCPrivateSubnet2Subnet671AE8E5"
              }
            ]
          }
        },
        "ServiceName": "worker",
        "ServiceRegistries": [
          {
            "RegistryArn": {
              "Fn::GetAtt": [
                "workerCloudmapServiceE2D9EC68",
                "Arn"
              ]
            }
          }
        ]
      }
    },
    "workerSecurityGroup49E290CB": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "aws-stack/worker/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        }
      }
    },
    "workerSecurityGroupfromawsstackschedulerSecurityGroup63FE0AE4ALLPORTS822058D8": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "from awsstackschedulerSecurityGroup63FE0AE4:ALL PORTS",
        "FromPort": 0,
        "GroupId": {
          "Fn::GetAtt": [
            "workerSecurityGroup49E290CB",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "schedulerSecurityGroup410E7B61",
            "GroupId"
          ]
        },
        "ToPort": 65535
      }
    },
    "workerSecurityGroupfromawsstackworkerSecurityGroupC4DE48EDALLPORTS5BD5855B": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "from awsstackworkerSecurityGroupC4DE48ED:ALL PORTS",
        "FromPort": 0,
        "GroupId": {
          "Fn::GetAtt": [
            "workerSecurityGroup49E290CB",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "workerSecurityGroup49E290CB",
            "GroupId"
          ]
        },
        "ToPort": 65535
      }
    },
    "workerCloudmapServiceE2D9EC68": {
      "Type": "AWS::ServiceDiscovery::Service",
      "Properties": {
        "DnsConfig": {
          "DnsRecords": [
            {
              "TTL": 60,
              "Type": "A"
            }
          ],
          "NamespaceId": {
            "Fn::GetAtt": [
              "DaskClusterDefaultServiceDiscoveryNamespace30C3BAD1",
              "Id"
            ]
          },
          "RoutingPolicy": "MULTIVALUE"
        },
        "HealthCheckCustomConfig": {
          "FailureThreshold": 1
        },
        "Name": "worker",
        "NamespaceId": {
          "Fn::GetAtt": [
            "DaskClusterDefaultServiceDiscoveryNamespace30C3BAD1",
            "Id"
          ]
        }
      }
    },
    "workerTaskCountTarget20E66C40": {
      "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
      "Properties": {
        "MaxCapacity": 18,
        "MinCapacity": 15,
        "ResourceId": {
          "Fn::Join": [
            "",
            [
              "service/",
              {
                "Ref": "DaskCluster3EF020CE"
              },
              "/",
              {
                "Fn::GetAtt": [
                  "workerService7AAAC38C",
                  "Name"
                ]
              }
            ]
          ]
        },
        "RoleARN": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":iam::",
              {
                "Ref": "AWS::AccountId"
              },
              ":role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService"
            ]
          ]
        },
        "ScalableDimension": "ecs:service:DesiredCount",
        "ServiceNamespace": "ecs"
      }
    },
    "workerTaskCountTargetworkerCpuScaling8C2D0921": {
      "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
      "Properties": {
        "PolicyName": "awsstackworkerTaskCountTargetworkerCpuScaling5458F1DC",
        "PolicyType": "TargetTrackingScaling",
        "ScalingTargetId": {
          "Ref": "workerTaskCountTarget20E66C40"
        },
        "TargetTrackingScalingPolicyConfiguration": {
          "DisableScaleIn": true,
          "PredefinedMetricSpecification": {
            "PredefinedMetricType": "ECSServiceAverageCPUUtilization"
          },
          "ScaleOutCooldown": 30,
          "TargetValue": 25
        }
      }
    },
    "workerTaskCountTargetworkerMemoryScaling8B796C9F": {
      "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
      "Properties": {
        "PolicyName": "awsstackworkerTaskCountTargetworkerMemoryScaling26B9770F",
        "PolicyType": "TargetTrackingScaling",
        "ScalingTargetId": {
          "Ref": "workerTaskCountTarget20E66C40"
        },
        "TargetTrackingScalingPolicyConfiguration": {
          "DisableScaleIn": true,
          "PredefinedMetricSpecification": {
            "PredefinedMetricType": "ECSServiceAverageMemoryUtilization"
          },
          "ScaleOutCooldown": 30,
          "TargetValue": 25
        }
      }
    },
    "schedulerTaskDefinitionTaskRoleBB547007": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "schedulerTaskDefinition397ACB72": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Command": [
              "dask-scheduler",
              "--interface",
              "eth0"
            ],
            "Cpu": 2048,
            "Essential": true,
            "Image": "docker.io/milesg/tda-daskworker:1.1.1",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "schedulerTaskDefinitionschedulerContainerLogGroupDE13D2D6"
                },
                "awslogs-stream-prefix": "scheduler-",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Memory": 4096,
            "Name": "schedulerContainer",
            "PortMappings": [
              {
                "ContainerPort": 8787,
                "HostPort": 8787,
                "Protocol": "tcp"
              },
              {
                "ContainerPort": 8786,
                "HostPort": 8786,
                "Protocol": "tcp"
              },
              {
                "ContainerPort": 9000,
                "HostPort": 9000,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "2048",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "schedulerTaskDefinitionExecutionRole611B61B3",
            "Arn"
          ]
        },
        "Family": "awsstackschedulerTaskDefinition102E53C7",
        "Memory": "4096",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "schedulerTaskDefinitionTaskRoleBB547007",
            "Arn"
          ]
        }
      }
    },
    "schedulerTaskDefinitionschedulerContainerLogGroupDE13D2D6": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "RetentionInDays": 1
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "schedulerTaskDefinitionExecutionRole611B61B3": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "schedulerTaskDefinitionExecutionRoleDefaultPolicyD9A1837E": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "schedulerTaskDefinitionschedulerContainerLogGroupDE13D2D6",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "schedulerTaskDefinitionExecutionRoleDefaultPolicyD9A1837E",
        "Roles": [
          {
            "Ref": "schedulerTaskDefinitionExecutionRole611B61B3"
          }
        ]
      }
    },
    "schedulerServiceF6E89BAD": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "TaskDefinition": {
          "Ref": "schedulerTaskDefinition397ACB72"
        },
        "Cluster": {
          "Ref": "DaskCluster3EF020CE"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "schedulerContainer",
            "ContainerPort": 8787,
            "TargetGroupArn": {
              "Ref": "schedulerTargetGroup255A1E73"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "schedulerSecurityGroup410E7B61",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "DaskVPCPrivateSubnet1Subnet428E411A"
              },
              {
                "Ref": "DaskVPCPrivateSubnet2Subnet671AE8E5"
              }
            ]
          }
        },
        "ServiceName": "scheduler",
        "ServiceRegistries": [
          {
            "RegistryArn": {
              "Fn::GetAtt": [
                "schedulerCloudmapServiceA67D4428",
                "Arn"
              ]
            }
          }
        ]
      },
      "DependsOn": [
        "jupyterLoadBalancerschedulerPublicListener643C3947"
      ]
    },
    "schedulerSecurityGroup410E7B61": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "aws-stack/scheduler/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        }
      }
    },
    "schedulerSecurityGroupfromawsstackjupyterLoadBalancerSecurityGroupFBFB97F6878710637C81": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 8787,
        "GroupId": {
          "Fn::GetAtt": [
            "schedulerSecurityGroup410E7B61",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "jupyterLoadBalancerSecurityGroupEC92C62E",
            "GroupId"
          ]
        },
        "ToPort": 8787
      }
    },
    "schedulerSecurityGroupfromawsstackworkerSecurityGroupC4DE48EDALLPORTS12D91105": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "from awsstackworkerSecurityGroupC4DE48ED:ALL PORTS",
        "FromPort": 0,
        "GroupId": {
          "Fn::GetAtt": [
            "schedulerSecurityGroup410E7B61",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "workerSecurityGroup49E290CB",
            "GroupId"
          ]
        },
        "ToPort": 65535
      }
    },
    "schedulerSecurityGroupfromawsstackjupyterSecurityGroup7315B6F7878652EB4030": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "from awsstackjupyterSecurityGroup7315B6F7:8786",
        "FromPort": 8786,
        "GroupId": {
          "Fn::GetAtt": [
            "schedulerSecurityGroup410E7B61",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "jupyterSecurityGroup17EB482F",
            "GroupId"
          ]
        },
        "ToPort": 8786
      }
    },
    "schedulerCloudmapServiceA67D4428": {
      "Type": "AWS::ServiceDiscovery::Service",
      "Properties": {
        "DnsConfig": {
          "DnsRecords": [
            {
              "TTL": 60,
              "Type": "A"
            }
          ],
          "NamespaceId": {
            "Fn::GetAtt": [
              "DaskClusterDefaultServiceDiscoveryNamespace30C3BAD1",
              "Id"
            ]
          },
          "RoutingPolicy": "MULTIVALUE"
        },
        "HealthCheckCustomConfig": {
          "FailureThreshold": 1
        },
        "Name": "scheduler",
        "NamespaceId": {
          "Fn::GetAtt": [
            "DaskClusterDefaultServiceDiscoveryNamespace30C3BAD1",
            "Id"
          ]
        }
      }
    },
    "schedulerTargetGroup255A1E73": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "HealthCheckIntervalSeconds": 60,
        "HealthCheckPath": "/status",
        "HealthCheckPort": "8787",
        "HealthCheckTimeoutSeconds": 40,
        "Matcher": {
          "HttpCode": "200-399"
        },
        "Port": 8787,
        "Protocol": "HTTP",
        "TargetType": "ip",
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        }
      }
    },
    "jupyterTaskDefinitionTaskRole310DE3DB": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "jupyterTaskDefinitionC583F407": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Command": [
              "jupyter",
              "notebook",
              "--NotebookApp.token=supersecret",
              "--ip",
              "0.0.0.0",
              "--no-browser",
              "--allow-root"
            ],
            "Cpu": 1024,
            "Essential": true,
            "Image": "docker.io/milesg/tda-daskworker:1.1.1",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "jupyterTaskDefinitionjupyterContainerLogGroup17A06FE5"
                },
                "awslogs-stream-prefix": "jupyter-",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Memory": 2048,
            "Name": "jupyterContainer",
            "PortMappings": [
              {
                "ContainerPort": 8888,
                "HostPort": 8888,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "1024",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "jupyterTaskDefinitionExecutionRole46A9A2AF",
            "Arn"
          ]
        },
        "Family": "awsstackjupyterTaskDefinition195D7703",
        "Memory": "2048",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "jupyterTaskDefinitionTaskRole310DE3DB",
            "Arn"
          ]
        }
      }
    },
    "jupyterTaskDefinitionjupyterContainerLogGroup17A06FE5": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "RetentionInDays": 1
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "jupyterTaskDefinitionExecutionRole46A9A2AF": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "jupyterTaskDefinitionExecutionRoleDefaultPolicy09A0F650": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "jupyterTaskDefinitionjupyterContainerLogGroup17A06FE5",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "jupyterTaskDefinitionExecutionRoleDefaultPolicy09A0F650",
        "Roles": [
          {
            "Ref": "jupyterTaskDefinitionExecutionRole46A9A2AF"
          }
        ]
      }
    },
    "jupyterService6C51F316": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "TaskDefinition": {
          "Ref": "jupyterTaskDefinitionC583F407"
        },
        "Cluster": {
          "Ref": "DaskCluster3EF020CE"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 120,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "jupyterContainer",
            "ContainerPort": 8888,
            "TargetGroupArn": {
              "Ref": "jupyterTargetGroupBE781992"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "jupyterSecurityGroup17EB482F",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "DaskVPCPublicSubnet1SubnetBAEBDFDE"
              },
              {
                "Ref": "DaskVPCPublicSubnet2SubnetDCC064E3"
              }
            ]
          }
        },
        "ServiceName": "jupyter",
        "ServiceRegistries": [
          {
            "RegistryArn": {
              "Fn::GetAtt": [
                "jupyterCloudmapService825F7C18",
                "Arn"
              ]
            }
          }
        ]
      },
      "DependsOn": [
        "jupyterLoadBalancerjupyterPublicListenerA7DC1ECF"
      ]
    },
    "jupyterSecurityGroup17EB482F": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "aws-stack/jupyter/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        }
      }
    },
    "jupyterSecurityGroupfromawsstackjupyterLoadBalancerSecurityGroupFBFB97F6888831AD9CBF": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 8888,
        "GroupId": {
          "Fn::GetAtt": [
            "jupyterSecurityGroup17EB482F",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "jupyterLoadBalancerSecurityGroupEC92C62E",
            "GroupId"
          ]
        },
        "ToPort": 8888
      }
    },
    "jupyterCloudmapService825F7C18": {
      "Type": "AWS::ServiceDiscovery::Service",
      "Properties": {
        "DnsConfig": {
          "DnsRecords": [
            {
              "TTL": 60,
              "Type": "A"
            }
          ],
          "NamespaceId": {
            "Fn::GetAtt": [
              "DaskClusterDefaultServiceDiscoveryNamespace30C3BAD1",
              "Id"
            ]
          },
          "RoutingPolicy": "MULTIVALUE"
        },
        "HealthCheckCustomConfig": {
          "FailureThreshold": 1
        },
        "Name": "jupyter",
        "NamespaceId": {
          "Fn::GetAtt": [
            "DaskClusterDefaultServiceDiscoveryNamespace30C3BAD1",
            "Id"
          ]
        }
      }
    },
    "jupyterTargetGroupBE781992": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "HealthCheckIntervalSeconds": 60,
        "HealthCheckPath": "/",
        "HealthCheckPort": "8888",
        "HealthCheckTimeoutSeconds": 40,
        "Matcher": {
          "HttpCode": "200-399"
        },
        "Port": 8888,
        "Protocol": "HTTP",
        "TargetType": "ip",
        "VpcId": {
          "Ref": "DaskVPC2EFDA1EC"
        }
      }
    }
  }
}
